namespace Visuals
{
    static class AnimatorParameters
    {
        // Players
        internal static readonly string IsGrounded = "Player/IsGrounded";
        internal static readonly string IsFalling = "Player/IsFalling";
        internal static readonly string IsWalking = "Player/IsWalking";
    
        internal static readonly string Velocity = "Physics/Velocity";
        
        // Weapons
        internal static readonly string Impact = "Weapon/Impact";
        internal static readonly string Blend = "Weapon/Blend";
    }
}