static class AnimatorParameters
{
    internal static readonly string IsGrounded = "Player/IsGrounded";
    internal static readonly string IsFalling = "Player/IsFalling";
    internal static readonly string IsWalking = "Player/IsWalking";
    
    internal static readonly string Velocity = "Physics/Velocity";
}